k8s/04-deployment-insight.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
  namespace: dpsrv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redisinsight
  template:
    metadata:
      labels:
        app: redisinsight
    spec:
      containers:
        - name: redisinsight
          image: redislabs/redisinsight:2.70.1
          ports:
            - containerPort: 5540
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
