k8s/04-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: dpsrv
  name: redis
spec:
  serviceName: redis
  replicas: 2
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      nodeSelector:
        DPSRV_REGION: cnt-use1
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: redis
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: redis
          image: redis:8.2.1-alpine
          ports:
            - name: redis
              containerPort: 6379
            - name: sentinel
              containerPort: 26379
          command: ["/bin/sh", "-c"]
          args:
            - |
              [...]
      enableServiceLinks: false
      imagePullSecrets:
        - name: dockerhub-dpsrv
      securityContext:
        #runAsUser: 999
        #runAsGroup: 999
        #fsGroup: 999
