k8s/06-deployment-insight.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
  namespace: dpsrv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redisinsight
  template:
    metadata:
      labels:
        app: redisinsight
    spec:
      nodeSelector:
        DPSRV_REGION: cnt-use1
      enableServiceLinks: false
      containers:
        - name: redisinsight
          image: redislabs/redisinsight:2.70.1
          ports:
            - containerPort: 5540
