k8s/02-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dpsrv
  name: redis
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
    - name: sentinel
      port: 26379
---
apiVersion: v1
kind: Service
metadata:
  name: redisinsight
  namespace: dpsrv
spec:
  type: ClusterIP
  ports:
    - port: 5540
      targetPort: 5540
      protocol: TCP
  selector:
    app: redisinsight
